2009-07-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m (-categoryList): insert the
	category of the current component in the list, don't convert it
	to upper case and sort the resulting list alphabetically.

2009-07-14  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/SOGoUI/UIxComponent.m ([UIxComponent -buildDate]): moved
	method from UIxPageFrame.

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent _updateRecurrenceIDsWithEvent:]): fixed a
	crash that occurs when saving a recurrent task with
	originalCalendar not initialized.

2009-07-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoUserFolder+Appointments.m
	(-davCalendarUserAddressSet): we return the "MAILTO:" prefix in
	lower case instead.

	* SoObjects/Appointments/SOGoAppointmentFolders.m
	(-davCalendarComponentSet): new method, copied from
	SOGoAppointmentFolder.

2009-07-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoContentObject.m (-davResourceType): new
	resource that returns an empty string for DAV compliance.

2009-07-09  Cyril Robert <crobert@inverse.ca>

	* UI/MailPartViewers/UIxMailRenderingContext.m: Display .tiff as
	attachments, some browsers don't support tiff.
	* SoObjects/Mailer/SOGoDraftObject.m: Fixed content type for multipart
	messages.

2009-07-07  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-attach:]): new method to return the ATTACH property of the
	component.
	([UIxComponentEditor -setAttach:]): associated setter method.

	* iCalEntityObject.m ([iCalEntityObject -attach]): new method to return the
	ATTACH property of the component as a URL.
	([iCalEntityObject -setAttach:]): new method to set the ATTACH property.

2009-07-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	(-additionalWebdavSyncFilters): overriden method for returning a