@@ -1,8 +1,20 @@
+2009-07-16  Cyril Robert <crobert@inverse.ca>
+
+	* UI/PreferencesUI/UIxPreferences.m: Added categories, categoriesValue,
+	setCategoriesValue to allow editing of calendar categories.
+	* UI/Scheduler/UIxComponentEditor.m: Made modifications to fetch categories
+	from user defaults, if they exist.
+
 2009-07-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* UI/Scheduler/UIxComponentEditor.m (-categoryList): insert the
 	category of the current component in the list, don't convert it
 	to upper case and sort the resulting list alphabetically.
+
+2009-07-14  Cyril Robert <crobert@inverse.ca>
+
+	* UI/Scheduler/UIxComponentEditor.m: Added a default title for
+	vevents and vtodos
 
 2009-07-14  Francis Lachapelle  <flachapelle@inverse.ca>
 
